<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/green"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_of_activity_r1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="32sp"
                android:textColor="@color/white">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">






        </LinearLayout>



        <Button
            android:id="@+id/t1"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:onClick="gotoRoller1"
            android:backgroundTint="@color/green"
            android:text="@string/goto_roller1">

        </Button>

        <Button
            android:id="@+id/t2"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/green"
            android:text="@string/goto_roller2">

        </Button>

        <Button
            android:id="@+id/t3"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/green"
            android:text="@string/goto_roller3">

        </Button>

        <Button
            android:id="@+id/t4"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="gotoRoller1"
            android:backgroundTint="@color/green"
            android:text="@string/goto_roller4">

        </Button>

        <Button
            android:id="@+id/t5"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="gotoRoller1"
            android:backgroundTint="@color/green"
            android:text="@string/goto_roller5">

        </Button>

        <Button
            android:id="@+id/t6"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="gotoRoller1"
            android:backgroundTint="@color/green"
            android:text="@string/goto_roller6">

        </Button>

    </LinearLayout>

</ScrollView>